@@ -1,3 +1,9 @@
+2001-06-21  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* schedule.cc: Added (and implemented a few) path types in
+	Patrol_schedule.
+	* Watch for failed allocation in Timidity driver.
+
 2001-06-19  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Spellbook_gump.cc:  Added SI reagants table (untested).
